tests/ui/scalable-vectors/illformed.stderr
error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:6:1
   |
LL | struct NoFieldsStructWithElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:15:1
   |
LL | struct NoFieldsUnitWithElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:20:1
   |
LL | struct NoFieldsStructWithoutElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:29:1
   |
LL | struct NoFieldsUnitWithoutElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:34:1
   |
LL | / struct MultipleFieldsStructWithElementCount {
LL | |
LL | |
LL | |     _ty: f32,
LL | |     other: u32,
LL | | }
   | |_^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:46:1
   |
LL | / struct MultipleFieldsStructWithoutElementCount {
LL | |
LL | |     _ty: f32,
...  |
LL | | }
   | |_^

error: scalable vectors must be tuple structs
  --> $DIR/illformed.rs:58:1
   |
LL | struct SingleFieldStruct { _ty: f64 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:6:1
   |
LL | struct NoFieldsStructWithElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: scalable vector types' only field must be a primitive scalar type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:11:1
   |
LL | struct NoFieldsTupleWithElementCount();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: scalable vector types' only field must be a primitive scalar type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:15:1
   |
LL | struct NoFieldsUnitWithElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: scalable vector types' only field must be a primitive scalar type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:20:1
   |
LL | struct NoFieldsStructWithoutElementCount {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: tuples of scalable vectors can only contain multiple of the same scalable vector type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:25:1
   |
LL | struct NoFieldsTupleWithoutElementCount();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: tuples of scalable vectors can only contain multiple of the same scalable vector type

error: scalable vectors must have a single field
  --> $DIR/illformed.rs:29:1
   |
LL | struct NoFieldsUnitWithoutElementCount;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: tuples of scalable vectors can only contain multiple of the same scalable vector type

error: scalable vectors cannot have multiple fields
  --> $DIR/illformed.rs:34:1
   |
LL | struct MultipleFieldsStructWithElementCount {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vectors cannot have multiple fields
  --> $DIR/illformed.rs:42:1
   |
LL | struct MultipleFieldsTupleWithElementCount(f32, u32);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: scalable vector structs can only have scalable vector fields
  --> $DIR/illformed.rs:48:5
   |
LL |     _ty: f32,
   |     ^^^^^^^^

error: scalable vector structs can only have scalable vector fields
  --> $DIR/illformed.rs:54:47
   |
LL | struct MultipleFieldsTupleWithoutElementCount(f32, u32);
   |                                               ^^^

error: aborting due to 17 previous errors

